# traincraft

./: .gitignore  .gitmodules  pom.xml
.script/: generate_jni_headers.bash
core/: pom.xml
core/src/main/java/me/pocolor/traincraft/: Main.java
core/src/main/java/me/pocolor/traincraft/engine/: Engine.java
engine/: CMakeLists.txt
engine/include/engine/: application.h  layer.h  layer_stack.h  tmp.h  window.h
engine/include/engine/event/: application_event.h  event.h  key_event.h  mouse_event.h
engine/include/engine/input/: input.h  key_codes.h  mouse_codes.h
engine/include/jni/: me_pocolor_traincraft_engine_Engine.h
engine/include/jni/engine/: me_pocolor_traincraft_engine_Engine.h
engine/include/log/: log.h
engine/src/: test.cpp
engine/src/engine/: application.cpp  layer_stack.cpp  window.cpp
engine/src/engine/input/: input.cpp
engine/src/jni/: java_engine.cpp
engine/src/log/: log.cpp
